Fix the position of close tip button.
So that if the content of the tip popup overflows the popup,
scrolling the content doesn't also scroll the close button out of view.

Before this patch, the entire popup was scrollable, but this patch
only makes the inner content scrollable, so that the close button stays
in a fixed position.

--- a/mentoring/public/css/questionnaire.css
+++ b/mentoring/public/css/questionnaire.css
@@ -36,9 +36,8 @@
     background: none repeat scroll 0 0 #66A5B5;
     font-family: arial;
     font-size: 14px;
-    overflow-y: auto;
     opacity: 0.9;
-    padding: 10px;
+    padding: 22px 10px;
     width: 300px;
 }
 
@@ -52,6 +51,7 @@
 .mentoring .questionnaire .feedback .tip-choice-group,
 .mentoring .questionnaire .feedback .message-content {
     position: relative;
+    overflow-y: auto;
 }
 
 .mentoring .questionnaire .choice-tips .close,
